--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,7 +10,7 @@ li {
   list-style-type: none;
 }
 header {
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   color: var(--second-color);
   background-color: var(--first-color);
   display: flex;
@@ -23,7 +23,7 @@ header > h1 {
   text-align: center;
 }
 footer {
-  box-shadow: 4px 0 0 2px rgba(0,0,0,.2);
+  box-shadow: 4px 0 0 2px rgba(0, 0, 0, 0.2);
   color: var(--second-color);
   background-color: var(--first-color);
   padding: 2rem;
@@ -42,25 +42,39 @@ a {
 a:visited {
   color: var(--second-color);
 }
-.bg{
-  width: max(220vw,220vh);
-  height: max(220vw,220vh);
+.bg {
+  width: max(220vw, 220vh);
+  height: max(220vw, 220vh);
   position: fixed;
-  top:min(-60vw,-60vh);
-  left: min(-60vw,-60vh);;
+  top: min(-60vw, -60vh);
+  left: min(-60vw, -60vh);
   z-index: -1;
-  background-image: linear-gradient(#cc7732 30%,white 70%);;
+  background-image: linear-gradient(#cc7732 30%, white 70%);
   animation: example 50s linear 0s infinite normal;
   transform-origin: center;
 }
 
 @keyframes example {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg);}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @media screen and (max-width: 630px) {
- header > h1{
-  display: none;
- }
+  header > h1 {
+    display: none;
+  }
+}
+
+.errorWrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 12rem);
+}
+.error{
+  text-align: center;
 }
